--- a/Factors_Influencing_Client_Choice.ipynb
+++ b/Factors_Influencing_Client_Choice.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,6 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
-    "import os\n",
     "from IPython.display import Image\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -64,15 +63,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir('/Users/selenereyes/dir-python/data')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -81,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,13 +181,13 @@
        "4         5           29                   39      0  Furniture Assembly  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df0 = pd.read_csv('data_analyst_sample_data.csv', \n",
+    "df0 = pd.read_csv('sample_data.csv', \n",
     "                        parse_dates=['created_at'])\n",
     "df0.head()"
    ]
